@@ -525,7 +525,7 @@
 	(X-offset-callbacks . (,Self_alignment_interface::aligned_on_self
 			       ,Self_alignment_interface::centered_on_parent))
 	(layer . 0)
-	(meta . ((class . Spanner)
+	(meta . ((class . Item)
 		 (interfaces . (self-alignment-interface grid-line-interface)))
 	      )))
     
